Fixed broken handshake on refresh page. Fixed pending transferIn (using a retry on the observable)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,9 @@ Loupedeck
 
 </ng-container>
 
-{{readData$ | async}}
+
+<ng-container *ngIf="chunks$|async as chunk">
+  <div >{{decodeAsHex(chunk.data )}} | {{chunk.status}}</div>
+
+</ng-container>
+
